Numbers exercises completed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Numbers Exericises</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <h1>Four Facts About My Favorite Number:</h1>
+    <ul id="facts"></ul>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="/numbers.js"></script>
 </body>
 </html>
