--- a/deckofcards.html
+++ b/deckofcards.html
@@ -6,6 +6,8 @@
     <title>Deck of Cards Exercises</title>
 </head>
 <body>
+    <h1>Deck of Cards</h1>
+    <div id="cards"></div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/deckofcards.js"></script>
 </body>
