--- a/deckofcards.html
+++ b/deckofcards.html
@@ -6,8 +6,16 @@
     <title>Deck of Cards Exercises</title>
 </head>
 <body>
-    <h1>Deck of Cards</h1>
+    <h1>Deck of Cards Parts 1 & 2</h1>
     <div id="cards"></div>
+    <h2>Part 3 Draw A Card:</h2>
+    <div id="drawACard">
+        <form action="#">
+            <button>Draw A Card</button>
+        </form>
+        <div id="showCard"></div>
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/deckofcards.js"></script>
 </body>
